# funcscript

./: .gitignore  AGENTS.md  FuncScript.sln  Makefile  README.md  mkdocs.yml  package-lock.json  package.json  publish.sh
.github/workflows/: ci.yml  docs.yml  publish-crates.yml  publish-pypi.yml
Bindings/Python/: README.md  pyproject.toml  setup.py
Bindings/Python/funcscript/: runtime.py
Bindings/Python/funcscript_core/: __init__.py  runtime.py
Bindings/Python/tests/: test_binding.py
FuncScript/: Engine.cs  FuncScript.csproj  GlobalFunctionProvider.cs  Instrumentation.cs
FuncScript.Sql/: FuncScript.Sql.csproj
FuncScript.Sql/Core/: PgSqlFunction.cs  SqlFunction.cs
FuncScript.Test/: AdvancedSyntax.cs  BasicTests.cs  BugAnalysis.cs  ChangeTypeFunctionTests.cs  CircularReferences.cs  ClosureTests.cs  DivisionOperatorTests.cs  ErrorPropagationTests.cs  FloatFunctionTests.cs  FormatFunctionTests.cs  FormatToJsonIntegrityTests.cs  FuncScript.Test.csproj  FuncScriptParser2.cs  FuzzCodeLocation.cs  GetLiteralMatchTests.cs  KvcItemSelectorSyntaxTests.cs  KvcTests.cs  LogFunctionTests.cs  MathFunctionTests.cs  PackageTests.cs  ParseTreeTests.cs  Syntax2.cs  SyntaxLibrary.cs  TestErrorReporting.cs  TextFunctionTests.cs  TraceTests.cs
FuncScript.Test/data/: big-kvc.fs  big-kvc2.fs  bug20251120_2.fs  exp.fs  exp.test.fs  fetch-data.fs  vsc-extension-test.fx
FuncScript/Block/: FunctionCallExpression.cs  KvcExpression.cs  (+7 more)
docs/: breaking-changes.md  examples.md  funcscript-fromal-syntax.md  getting-started.md  index.md  known-issues.md  syntax.md
funcscript-core/: Cargo.toml  README.md
funcscript-core/include/: funcscript.h
funcscript-core/src/: chunk.rs  compiler.rs  ffi.rs  host.rs  lib.rs  main.rs  native.rs  obj.rs  scanner.rs  value.rs  vm.rs  wasm.rs
funcscript-core/tests/: eval_tests.rs  ffi_tests.rs
funscript-js-demo/: package-lock.json  package.json
js-port/: port-progress.md
notes/: known-issues.md
package/: package.json
scripts/: vercel-build.sh
(+423 files in other folders)
